--- a/index.html
+++ b/index.html
@@ -5,25 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana app</title>
-    <style>
-        textarea{
-            width: 50%;
-            height: 20vh;
-            margin: 1rem;
-            padding: 1rem;
-        }
-        #translate{
-            margin-left: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>talk to banana app</h1>
-    <textarea placeholder="Enter the text to translate"id="txt-input"></textarea>
-    <br>
-    <button id="translate">Translate</button>
-    <br>
-    <textarea id="txt-output"></textarea>
+    <header class="header">
+        <div>talk to banana app</div>
+    </header>
+    <main>
+        <textarea placeholder="Enter the text to translate"id="txt-input"></textarea>
+        <br>
+        <button id="translate">Translate</button>
+        <div id="output"></div>
+    </main>
+    
     <script src="app.js"></script>
 </body>
 </html>
