--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
     <main>
         <textarea placeholder="Enter the text to translate"id="txt-input"></textarea>
         <br>
-        <button id="translate">Translate</button>
+        <button id="translate">Translate to Banana</button>
+        <div style="font-size:larger;">Translation will come here 👇</div>
         <div id="output"></div>
     </main>
-    
+    <footer>
+        <div>about</div>
+        <p>
+            Are you a fan of minions? 
+            Did you know that the gibberish they say is an actual language. 
+            Use the translator to convert your text from English to Minion speak or Banana language.</p>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
