--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="output"></div>
     </main>
     <footer>
-        <div>about</div>
+        <div style="font-size: x-large;">about</div>
         <p>
             Are you a fan of minions? 
             Did you know that the gibberish they say is an actual language. 
